# qt-template-vscode

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  NOTICE  conanfile.py  qt-template.code-workspace
.github/workflows/: linux-qt6.yml  macos-qt6.yml  windows-qt6-mingw.yml
cmake/toolchains/: mxe-mingw64.cmake
conan/profiles/: default  linux-gcc  macos-clang  windows-mingw
docs/: THIRD_PARTY_NOTICES.md
resources/: app_icon.rc  resources.qrc
scripts/: convert_icon.py
src/: main.cpp
